@@ -1,3 +1,8 @@
+  * Added "texfile" entry in block definition YAML, to support mods
+    which use an entire new sheet of textures
+  * Support for effectively unlimited block textures
+  * Stems now connect to neighboring fruit properly
+
 Minecraft X-Ray 3.3.3 (2011.09.23)
 
   * Support for all Beta 1.9 blocks
